[Streams API] ASSERT(!resultOrException.hasException(scope)) in ReadableStreamDefaultReader::read() fires when a worker is terminated mid-read https://bugs.webkit.org/show_bug.cgi?id=321607

Reviewed by Youenn Fablet.

The test streams/pipeTo-in-worker-terminate-crash.html terminates
workers mid-flight, which should not trigger a crash. In such scenarios,
the read operation might happen while we have a pending
TerminationException. With the current assertion, instead of returning
silently as a non-assertion build would, we end up with a crash.

To address it, this commit relaxes the assertion by accepting this
termination state as valid, an approach also currently taken by
ReadableStreamDefaultController.cpp (since 243538@main).

* LayoutTests/platform/wpe/TestExpectations:
* Source/WebCore/Modules/streams/ReadableStreamDefaultReader.cpp:
(WebCore::ReadableStreamDefaultReader::read):

Canonical link: https://commits.webkit.org/319395@main